--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "type": "commonjs",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "postgre": "^0.1.8"
   }
